@@ -32,6 +32,7 @@
 				<Option object_output="obj/Debug32/" />
 				<Option type="1" />
 				<Option compiler="MINGW32" />
+				<Option parameters="-m showdate.depend --add-minutes 8 --sub-seconds 18" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -41,6 +42,7 @@
 				<Option object_output="obj/Release32/" />
 				<Option type="1" />
 				<Option compiler="MINGW32" />
+				<Option parameters="-h" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
